2004-06-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgHandler.py (parse_args): Switch from 'tgz' to 'gpkg'
	for Gramps package; (handle_args): Use separate dir for all 
	import-produced files; (cl_export): Convert media objects export
	to the database interface. 
	* src/ReadXML.py (importData): Copy all local (with respect to
	the old XML way) media object files into <database>.images dir 
	(created if did not previously exist). Change objects' paths
	accordingly; (GrampsParser.start_object): Do not modify path
	in the parser. This way we know that the objects are local.
	* src/RelLib.py (get_event_keys): Add method to GrampsDB class.
	* src/plugins/WritePkg.py (PackageWriter.export): 
	Convert missing media handling to the database interface.
	* src/plugins/WriteCD.py (PackageWriter.on_ok_clicked):
	Convert missing media handling to the database interface.

	* doc/gramps.1.in, doc/gramps.1: Update.

2004-06-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/data/gramps.keys, src/data/mime: Add package and GEDCOM.
	* src/PedView.py: Fix anchors. Switch from storing person objects
	to their IDs. Start on building Spouses and Siblings submenus
	in the context menu.
	* NEWS: Update.

	* src/ArgHandler.py: Fixes.
	* src/gramps_main.py: Don't show topWindow until ArgHandler is done.
	* src/plugins/Summary.py: Fixes.

2004-06-20  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in: Bump up the version number. 
	* src/gramps.py: Pass complete argument string. 
	* src/gramps_main.py: Pass popt table to gnome_init().
	Always enable argument handling. (read_xml,read_pkg): Add functions.
	* src/const.py.in: Define popt table, add all gnome options.
	* src/ArgHandler.py: Add long options for gramps-specific options.
	Add handling for the first filename argument. Use 'gramps-xml'
	to denote old gramps (XML) format. 
	* src/DbPrompter.py: Add hint for the filename.
	* src/plugins/ReadNative.py: Cosmetic changes.
	* src/plugins/ReadPkg.py: Cosmetic changes.