@@ -48,6 +48,7 @@ class ListModel:
             renderer = gtk.CellRendererText()
             renderer.set_fixed_height_from_font(1)
             column = gtk.TreeViewColumn(name[0],renderer,text=cnum)
+            column.set_reorderable(gtk.TRUE)
             column.set_min_width(name[2])
 
             if name[0] == '':
