@@ -10183,7 +10183,7 @@
 			      <property name="has_focus">True</property>
 			      <property name="headers_visible">True</property>
 			      <property name="rules_hint">False</property>
-			      <property name="reorderable">False</property>
+			      <property name="reorderable">True</property>
 			      <property name="enable_search">True</property>
 			    </widget>
 			  </child>
